[project]
name = "clean"
version = "1.0.1"
description = "Default template for PDM package"
readme = "README.md"
requires-python = "<3.15,>=3.10"
authors = [
    {name = "yaowan233", email = "572473053@qq.com"},
]
dependencies = [
    "nonebot-plugin-sentry>=2.0.0",
    "nonebot-plugin-osubot>=6.25.0",
    "nonebot-plugin-eventexpiry>=0.1.1",
    "nonebot-plugin-remake>=0.4.1",
    "nonebot-plugin-heweather>=0.9.0",
    "nonebot-plugin-picstatus>=2.2.2",
    "wordcloud>=1.9.3",
    "python-multipart>=0.0.9",
    "jieba>=0.42.1",
    "nonebot-plugin-datastore>=1.2.0",
    "nonebot-plugin-mahjong-hand-guess>=0.4.3",
    "nonebot-plugin-sayoroll>=1.0.5",
    "nonebot-adapter-onebot>=2.4.4",
    "sqlmodel>=0.0.21",
    "pydantic>=2.10.3",
    "nonebot-plugin-fix-qq-img-ssl>=0.1.1",
    "nonebot2>=2.4.4",
    "nonebot_plugin_remake>=0.4.4",
    "nonebot_plugin_userinfo>=0.2.6",
    "nonebot-plugin-alconna",
    "playwright",
    "nonebot-plugin-picmenu-next>=0.1.6.post1",
    "tsugu-api-python>=1.5.10",
    "lxml>=6.0.2",
    "beautifulsoup4>=4.14.3",
    "langchain-openai>=1.1.10",
    "asyncpg>=0.31.0",
    "nonebot-plugin-ai-groupmate>=2.0.1",
    "spellchecker>=0.4",
    "nb-cli>=1.7.3",
]
license = {text = "MIT"}

[tool.nonebot]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-sentry = ["nonebot_plugin_sentry"]
nonebot-plugin-osubot = ["nonebot_plugin_osubot"]
nonebot_plugin_remake = ["nonebot_plugin_remake"]
nonebot_plugin_userinfo = ["nonebot_plugin_userinfo"]
nonebot-plugin-alconna = ["nonebot_plugin_alconna"]
nonebot-plugin-heweather = ["nonebot_plugin_heweather"]
nonebot-plugin-mahjong-hand-guess = ["nonebot_plugin_mahjong_hand_guess"]
nonebot-plugin-sayoroll = ["nonebot_plugin_sayoroll"]
nonebot-plugin-fix-qq-img-ssl = ["nonebot_plugin_fix_qq_img_ssl"]
nonebot-plugin-picmenu-next = ["nonebot_plugin_picmenu_next"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-satori = [{name = "Satori", module_name = "nonebot.adapters.satori"}]
